--- a/px-checkout/src/main/res/layout/px_remedies.xml
+++ b/px-checkout/src/main/res/layout/px_remedies.xml
@@ -5,22 +5,30 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_marginTop="@dimen/ui_3m"
-    android:layout_marginStart="@dimen/ui_3m"
-    android:layout_marginEnd="@dimen/ui_3m"
     android:layout_height="wrap_content">
 
-    <com.mercadopago.android.px.internal.features.payment_result.remedies.view.CvvRemedy
-        android:id="@+id/cvv"
-        android:visibility="gone"
-        tools:visibility="visible"
-        android:layout_marginBottom="@dimen/ui_3m"
+    <FrameLayout
+        android:id="@+id/retry_payment_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <fragment
+            android:id="@+id/retry_payment"
+            android:name="com.mercadopago.android.px.internal.features.payment_result.remedies.view.RetryPaymentFragment"
+            android:layout_marginBottom="@dimen/ui_3m"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </FrameLayout>
 
     <com.mercadopago.android.px.internal.features.payment_result.remedies.view.HighRiskRemedy
         android:id="@+id/high_risk"
         android:visibility="gone"
         tools:visibility="visible"
+        android:layout_marginStart="@dimen/ui_3m"
+        android:layout_marginEnd="@dimen/ui_3m"
         android:layout_marginBottom="@dimen/ui_3m"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
