--- a/px-checkout/src/main/res/layout/highlight_text.xml
+++ b/px-checkout/src/main/res/layout/highlight_text.xml
@@ -4,31 +4,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="0dp"
+    app:layout_constraintHeight_percent="0.1835"
     app:layout_constraintBottom_toBottomOf="parent"
     tools:showIn="@layout/px_fragment_saved_card"
+    tools:layout_height="29dp"
     android:orientation="vertical">
 
     <View
         android:id="@+id/bottom_description_shadow"
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:background="@drawable/shadow_top">
-    </View>
+        android:layout_height="0dp"
+        android:layout_weight="5"
+        android:background="@drawable/shadow_top" />
 
     <FrameLayout
         android:id="@+id/bottom_description_background"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="24"
         android:background="@color/px_color_highlight">
 
         <com.mercadopago.android.px.internal.view.MPTextView
             android:id="@+id/bottom_description"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/px_xxxs_margin"
-            android:textAlignment="center"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/px_s_margin"
+            android:layout_marginEnd="@dimen/px_s_margin"
+            android:gravity="center"
             android:textColor="@color/ui_meli_white"
             android:textSize="@dimen/px_xs_text"
             android:ellipsize="end"
