--- a/px-checkout/src/main/res/layout/px_fragment_consumer_credits.xml
+++ b/px-checkout/src/main/res/layout/px_fragment_consumer_credits.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/payment_method"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/px_s_margin"
         android:layout_marginLeft="@dimen/px_m_margin"
         android:layout_marginRight="@dimen/px_m_margin"
