--- a/px-checkout/src/main/res/layout/px_fragment_other_payment_method_small.xml
+++ b/px-checkout/src/main/res/layout/px_fragment_other_payment_method_small.xml
@@ -2,14 +2,20 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clipChildren="false"
+    android:clipToPadding="false"
+    android:paddingBottom="@dimen/px_s_margin"
+    android:paddingStart="@dimen/px_m_margin"
+    android:paddingEnd="@dimen/px_m_margin">
 
     <LinearLayout
         android:id="@+id/px_other_payment_method_small"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/px_s_margin"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintDimensionRatio="@string/px_card_aspect_ratio"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -17,6 +23,10 @@
         <include
             layout="@layout/px_other_payment_method_card_view_small"
             android:id="@+id/px_add_new_card" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/px_xs_margin" />
 
         <include
             layout="@layout/px_other_payment_method_card_view_small"
