--- a/px-checkout/src/main/res/layout/px_fragment_saved_card.xml
+++ b/px-checkout/src/main/res/layout/px_fragment_saved_card.xml
@@ -9,30 +9,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/px_s_margin"
-        android:layout_marginLeft="@dimen/px_m_margin"
-        android:layout_marginRight="@dimen/px_m_margin"
+        android:layout_marginStart="@dimen/px_m_margin"
+        android:layout_marginEnd="@dimen/px_m_margin"
+        android:clipChildren="false"
         app:cardCornerRadius="@dimen/px_xs_margin"
         app:cardElevation="2dp"
         app:cardPreventCornerOverlap="false">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
-        <com.meli.android.carddrawer.model.CardDrawerView
-            android:id="@+id/card"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:card_header_behaviour="responsive"
-            app:card_header_internal_padding="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            <com.meli.android.carddrawer.model.CardDrawerView
+                android:id="@+id/card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:card_header_behaviour="responsive"
+                app:card_header_internal_padding="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
             <include layout="@layout/highlight_text" />
 
         </android.support.constraint.ConstraintLayout>
-
     </android.support.v7.widget.CardView>
 </FrameLayout>
