--- a/px-checkout/src/main/res/layout/px_fragment_saved_card_low_res.xml
+++ b/px-checkout/src/main/res/layout/px_fragment_saved_card_low_res.xml
@@ -17,16 +17,14 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <com.meli.android.carddrawer.model.CardDrawerViewLowres
                 android:id="@+id/card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:card_header_behaviour="responsive"
                 app:card_header_internal_padding="0dp" />
 
