--- a/px-checkout/src/main/res/layout/px_remedies_cvv.xml
+++ b/px-checkout/src/main/res/layout/px_remedies_cvv.xml
@@ -2,34 +2,22 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:ignore="NegativeMargin"
     tools:parentTag="android.widget.LinearLayout"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.mercadopago.android.px.internal.view.MPTextView
-        android:id="@+id/titleCvv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/ui_3m"
-        android:lineSpacingExtra="@dimen/ui_linespacing_large"
-        android:textColor="@color/px_expressCheckoutInstallmentTitle"
-        android:textSize="@dimen/px_s_text"
-        tools:hint="Código de seguridad"
-        tools:text="Vuelve a ingresarlo para confirmar el pago" />
-
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/inputLayout"
+        android:id="@+id/input_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="-4dp"
-        android:layout_marginEnd="-4dp"
+        android:layout_marginStart="@dimen/ui_2_5m"
+        android:layout_marginEnd="@dimen/ui_2_5m"
         android:theme="@style/InputTheme"
         app:hintTextAppearance="@style/InputHintTheme">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/inputCvv"
+            android:id="@+id/input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="1"
@@ -40,10 +28,12 @@
     </android.support.design.widget.TextInputLayout>
 
     <com.mercadopago.android.px.internal.view.MPTextView
-        android:id="@+id/infoCvv"
+        android:id="@+id/info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/px_expressCheckoutInstallmentTitle"
+        android:layout_marginStart="@dimen/ui_3m"
+        android:layout_marginEnd="@dimen/ui_3m"
+        android:textColor="@color/px_payment_result_component_subtitle"
         android:textSize="@dimen/px_xs_text"
         tools:text="Los 3 números están al dorso de la tarjeta" />
 </merge>
