* Added pay button to offline methods

--- a/px-checkout/src/main/res/layout/fragment_pay_button.xml
+++ b/px-checkout/src/main/res/layout/fragment_pay_button.xml
@@ -11,4 +11,9 @@
         android:layout_height="wrap_content"
         android:text="@string/px_pay" />
 
+    <FrameLayout
+        android:id="@+id/exploding_frame"
+        android:layout_width="0dp"
+        android:layout_height="0dp"/>
+
 </FrameLayout>
