--- a/px-checkout/src/main/res/layout/px_fragment_express_payment.xml
+++ b/px-checkout/src/main/res/layout/px_fragment_express_payment.xml
@@ -51,8 +51,10 @@
             app:px_spi_dotColor="@color/px_expressCheckoutScrollIndicatorColor"
             app:px_spi_dotSelectedColor="@color/ui_components_primary_color" />
 
-        <FrameLayout
+        <fragment
+            tools:layout="@layout/fragment_pay_button"
             android:id="@+id/pay_button"
+            android:name="com.mercadopago.android.px.internal.features.pay_button.PayButtonFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/px_m_margin"
