--- a/px-checkout/src/main/res/layout/px_fragment_offline_methods.xml
+++ b/px-checkout/src/main/res/layout/px_fragment_offline_methods.xml
@@ -87,20 +87,21 @@
             android:layout_height="wrap_content"
             android:paddingVertical="@dimen/ui_2m"
             android:paddingHorizontal="@dimen/ui_3m"
-            app:layout_constraintBottom_toTopOf="@id/confirm_button"
+            app:layout_constraintBottom_toTopOf="@id/pay_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tool:text="Procesado por Mercado Pago Estándar"/>
 
-        <com.mercadolibre.android.ui.widgets.MeliButton
-            android:id="@+id/confirm_button"
+        <fragment
+            tool:layout="@layout/fragment_pay_button"
+            android:name="com.mercadopago.android.px.internal.features.pay_button.PayButtonFragment"
+            android:id="@+id/pay_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/ui_3m"
             android:layout_marginHorizontal="@dimen/ui_3m"
-            android:text="@string/px_pay"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
     <FrameLayout
