update model, layout updated

--- a/px-checkout/src/main/res/layout/highlight_text.xml
+++ b/px-checkout/src/main/res/layout/highlight_text.xml
@@ -29,8 +29,8 @@
             android:id="@+id/bottom_description"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/px_s_margin"
-            android:layout_marginEnd="@dimen/px_s_margin"
+            android:layout_marginStart="@dimen/px_s_alternative_1_margin"
+            android:layout_marginEnd="@dimen/px_s_alternative_1_margin"
             android:gravity="center"
             android:textColor="@color/ui_meli_white"
             android:textSize="@dimen/px_xs_text"
