--- a/px-checkout/src/main/res/layout/px_other_payment_method_card_view_small.xml
+++ b/px-checkout/src/main/res/layout/px_other_payment_method_card_view_small.xml
@@ -31,10 +31,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/px_s_margin"
-            android:layout_marginEnd="@dimen/px_s_margin"
+            android:layout_marginEnd="@dimen/px_xs_margin"
             android:textColor="@color/px_color_translucent_black"
             android:textSize="@dimen/px_s_text"
             app:customStyle="regular"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:importantForAccessibility="no"
             app:layout_constraintBottom_toTopOf="@id/other_payment_method_secondary_message"
             app:layout_constraintEnd_toStartOf="@id/arrow"
@@ -47,10 +49,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/px_s_margin"
-            android:layout_marginEnd="@dimen/px_s_margin"
+            android:layout_marginEnd="@dimen/px_xs_margin"
             android:textColor="@color/px_color_highlight"
             android:textSize="@dimen/px_xs_text"
             app:customStyle="regular"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:importantForAccessibility="no"
             app:layout_constraintBottom_toBottomOf="@id/other_payment_method_image"
             app:layout_constraintEnd_toStartOf="@id/arrow"
