--- a/px-checkout/src/main/res/layout/px_cvv_info.xml
+++ b/px-checkout/src/main/res/layout/px_cvv_info.xml
@@ -20,7 +20,7 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.90" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <com.mercadopago.android.px.internal.view.MPTextView
         android:id="@id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -29,6 +29,7 @@
         android:layout_marginBottom="@dimen/ui_1_5m"
         android:lineSpacingExtra="6sp"
         android:gravity="center_horizontal"
+        app:customStyle="semi_bold"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintBottom_toTopOf="@id/message"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +39,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Ingresa el código de seguridad dinámico" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <com.mercadopago.android.px.internal.view.MPTextView
         android:id="@id/message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
