Pay button fragment on review and confirm

--- a/px-checkout/src/main/res/layout/px_view_container_review_and_confirm.xml
+++ b/px-checkout/src/main/res/layout/px_view_container_review_and_confirm.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:background="@color/px_white"
-             android:fitsSystemWindows="true">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/px_white"
+    android:fitsSystemWindows="true">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -33,27 +34,14 @@
             android:layout_height="1dp"
             android:background="@color/px_med_light_gray"/>
 
-        <com.mercadolibre.android.ui.widgets.MeliButton
-            android:id="@+id/floating_confirm"
+        <fragment
+            android:name="com.mercadopago.android.px.internal.features.pay_button.PayButtonFragment"
+            android:id="@+id/pay_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?attr/selectableItemBackground"
-            android:gravity="center"
             android:layout_margin="@dimen/px_s_margin"
-            android:text="@string/px_pay"
-            app:state="normal"
-            app:type="actionPrimary"
-            />
+            tools:layout="@layout/fragment_pay_button"/>
 
     </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/exploding_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="@dimen/px_xxs_margin"/>
 
 </FrameLayout>
