--- a/px-checkout/src/main/res/layout/px_business_components.xml
+++ b/px-checkout/src/main/res/layout/px_business_components.xml
@@ -27,6 +27,25 @@
         android:layout_marginLeft="@dimen/px_l_margin"
         android:layout_marginStart="@dimen/px_l_margin"/>
 
+    <TextView
+        android:id="@+id/touchpointLabelView"
+        style="@style/touchpointLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/px_s_margin"
+        android:layout_marginEnd="@dimen/px_l_margin"
+        android:layout_marginStart="@dimen/px_l_margin"
+        app:layout_goneMarginBottom="@dimen/px_m_margin"
+        android:visibility="gone"/>
+
+    <com.mercadolibre.android.mlbusinesscomponents.components.touchpoint.view.MLBusinessTouchpointView
+        android:id="@+id/touchpointView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
     <com.mercadolibre.android.mlbusinesscomponents.components.discount.MLBusinessDiscountBoxView
         android:id="@+id/discountView"
         android:layout_width="match_parent"
@@ -36,7 +55,8 @@
         android:layout_marginRight="@dimen/px_l_margin"
         android:layout_marginEnd="@dimen/px_l_margin"
         android:layout_marginLeft="@dimen/px_l_margin"
-        android:layout_marginStart="@dimen/px_l_margin"/>
+        android:layout_marginStart="@dimen/px_l_margin"
+        android:visibility="gone"/>
 
     <com.mercadolibre.android.ui.widgets.MeliButton
         android:id="@+id/showAllDiscounts"
