--- a/px-checkout/src/main/res/values/styles.xml
+++ b/px-checkout/src/main/res/values/styles.xml
@@ -159,4 +159,10 @@
         <item name="android:textSize">@dimen/px_xs_text</item>
     </style>
 
+    <style name="touchpointLabel" parent="MLFont.Bold.Semi">
+        <item name="android:lineSpacingExtra">@dimen/ui_linespacing_small</item>
+        <item name="android:textColor">@color/ui_fullscreenmodal_toolbar_text_color</item>
+        <item name="android:textSize">@dimen/ui_fontsize_large</item>
+    </style>
+
 </resources>
