--- a/example/src/main/res/layout/activity_custom_initialization.xml
+++ b/example/src/main/res/layout/activity_custom_initialization.xml
@@ -69,6 +69,42 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/accessTokenInput"/>
 
+    <TextView
+        android:id="@+id/processor_type_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/ui_0_5m"
+        android:text="@string/payment_processor_type"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/one_tap"/>
+
+    <RadioGroup
+        android:id="@+id/processor_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingVertical="@dimen/ui_2m"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/processor_type_title">
+        <RadioButton android:id="@+id/default_processor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/ui_2m"
+            android:text="@string/processor_type_default"/>
+        <RadioButton android:id="@+id/visual_processor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/ui_2m"
+            android:text="@string/processor_type_visual"/>
+        <RadioButton android:id="@+id/no_visual_processor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/ui_2m"
+            android:text="@string/processor_type_no_visual"/>
+    </RadioGroup>
+
     <Button
         android:id="@+id/clearButton"
         android:layout_width="match_parent"
@@ -76,7 +112,7 @@
         android:text="@string/clear_label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/one_tap"/>
+        app:layout_constraintTop_toBottomOf="@id/processor_type"/>
 
     <Button
         android:id="@+id/startButton"
