[Feature] experiment installments row (#2184)
* init pulse view

* circle arrow added

* background added by android version

* pulse animation

* version resources added

* refactor badge experiment

* refactor experiment helper

* has_interest_free and has_reimbursement extra_info added

* unused classes are removed

* refactor payment method descriptor

* revert changes

* refactor checkout service

* resources removed

* refactor variant type, variant handler added

* vector drawable support added

* resolve test

* refactoring methods

* srcCompat added for pulse image view

* refactor availableMethod builder

* vector consumer credits refactor

* refactor CardExtraExpress, resolve test

--- a/px-checkout/src/main/res/layout/px_amount_layout.xml
+++ b/px-checkout/src/main/res/layout/px_amount_layout.xml
@@ -94,8 +94,8 @@
             android:layout_centerVertical="true"
             android:layout_gravity="right|end|center_vertical"
             android:layout_marginStart="@dimen/px_xxs_margin"
-            android:background="@drawable/px_arrow_right"
-            app:backgroundTint="@color/px_darkest_gray"
+            app:srcCompat="@drawable/px_arrow_right"
+            android:tint="@color/px_darkest_gray"
             android:orientation="vertical"
             android:visibility="visible"/>
 
