--- a/px-checkout/src/main/res/layout/px_other_payment_method_card_view_small_low_res.xml
+++ b/px-checkout/src/main/res/layout/px_other_payment_method_card_view_small_low_res.xml
@@ -31,7 +31,7 @@
             android:layout_width="@dimen/px_height_low_res"
             android:layout_height="@dimen/px_height_low_res"
             android:layout_marginStart="@dimen/px_s_margin"
-            android:src="@drawable/px_ico_new_card"
+            app:srcCompat="@drawable/px_ico_new_card"
             android:importantForAccessibility="no"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/px_s_margin"
-            android:src="@drawable/px_arrow_right"
+            app:srcCompat="@drawable/px_arrow_right"
             android:tint="@color/ui_components_android_color_primary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
