--- a/px-checkout/src/main/res/values/colors.xml
+++ b/px-checkout/src/main/res/values/colors.xml
@@ -214,4 +214,9 @@
     <color name="px_disabled_background">#ededed</color>
     <color name="px_disabled_font">#11000000</color>
 
+    <!-- Colors used by pulse view -->
+    <color name="pulseColor">#0099CC</color>
+
+    <color name="px_circle_arrow_background">#EEEEEE</color>
+
 </resources>
