--- a/px-checkout/src/main/res/values/dimens.xml
+++ b/px-checkout/src/main/res/values/dimens.xml
@@ -85,5 +85,7 @@
 
     <!-- Animation -->
     <dimen name="px_camera_distance">2560dp</dimen>
+    <dimen name="pulseStrokeWidth">2dp</dimen>
+    <dimen name="pulseRadius">64dp</dimen>
 
 </resources>
