--- a/px-checkout/src/main/res/layout/px_fragment_consumer_credits_low_res.xml
+++ b/px-checkout/src/main/res/layout/px_fragment_consumer_credits_low_res.xml
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/px_xs_margin"
-                android:src="@drawable/px_consumer_credits_onetap"
+                app:srcCompat="@drawable/px_consumer_credits_onetap"
                 app:layout_constraintBottom_toTopOf="@id/bottom_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
