Update CFTFormatter for CFTNA
(cherry picked from commit d0a74a6bf01c0a70d5d677e8f9a8665b27853fe3)

--- a/px-checkout/src/main/res/values/no_translatable.xml
+++ b/px-checkout/src/main/res/values/no_translatable.xml
@@ -6,6 +6,7 @@
     <string name="px_prefix_discount_amount" translatable="false">- {0}</string>
     <string name="px_installments_by" translatable="false">x</string>
     <string name="px_installments_cft" translatable="false">CFT: {0}</string>
+    <string name="px_installments_cftna" translatable="false">CFTNA: {0}</string>
     <string name="px_payer_information_identification_type_and_number" translatable="false">{0}: {1}</string>
     <string name="px_payer_information_first_and_last_name" translatable="false">{0} {1}</string>
     <string name="px_identification_card_holder_hint" translatable="false">•• ••• •••</string>
