--- a/px-checkout/src/main/res/layout/px_view_discount_detail.xml
+++ b/px-checkout/src/main/res/layout/px_view_discount_detail.xml
@@ -1,62 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:id="@+id/main_container"
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_gravity="center"
-              android:gravity="center"
-              android:orientation="vertical"
-              android:padding="@dimen/px_m_margin">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="@dimen/ui_3m"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.mercadopago.android.px.internal.view.MPTextView
-        android:id="@+id/subtitle"
+        android:id="@+id/summary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="left|start"
-        android:textColor="@color/ui_meli_black"
-        android:textSize="@dimen/px_xs_text"
-        app:customStyle="semi_bold"
+        android:textSize="@dimen/ui_2m"
+        android:lineSpacingExtra="@dimen/ui_050m"
+        android:gravity="center"
+        tools:customStyle="semi_bold"
+        tools:textColor="@color/ui_meli_black"
         tools:text="Tope de descuento $ 250"/>
 
     <com.mercadopago.android.px.internal.view.MPTextView
-        android:id="@+id/detail"
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginTop="@dimen/px_xxs_margin"
-        android:textColor="@color/ui_meli_grey"
-        android:textSize="@dimen/px_xs_text"
-        app:customStyle="light"
+        android:layout_marginTop="@dimen/ui_1m"
+        android:lineSpacingExtra="@dimen/ui_050m"
+        android:textSize="@dimen/ui_2m"
+        android:gravity="center"
+        tools:textColor="#cc000000"
         tools:text="Tope disponible para consumir en un único pago. Válido hasta el 1 de agosto de 2019."/>
 
     <com.mercadopago.android.px.internal.view.MPTextView
-        android:id="@+id/linkText"
+        android:id="@+id/legal_terms"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginTop="@dimen/px_xxs_margin"
+        android:layout_marginTop="@dimen/ui_5m"
         android:text="@string/px_terms_and_conditions"
+        android:lineSpacingExtra="@dimen/ui_050m"
         android:textColor="@color/ui_components_primary_color"
-        android:textSize="@dimen/ui_fontsize_xxsmall"
+        android:textSize="@dimen/ui_2m"
+        android:gravity="center"
         tools:text="Términos y condiciones"/>
-
-    <View
-        android:id="@+id/px_discount_detail_line"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="@dimen/px_s_margin"
-        android:background="@color/px_med_light_gray"/>
-
-    <com.mercadopago.android.px.internal.view.MPTextView
-        android:id="@+id/px_discount_sub_details"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/px_s_margin"
-        android:gravity="start"
-        android:text="@string/px_we_apply_the_best_available_discount"
-        android:textColor="@color/ui_meli_grey"
-        android:textSize="@dimen/px_xs_text"
-        app:customStyle="light"/>
 </LinearLayout>
