--- a/px-checkout/src/main/res/layout/px_view_discount_detail.xml
+++ b/px-checkout/src/main/res/layout/px_view_discount_detail.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:id="@+id/main_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="@dimen/ui_3m"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:padding="@dimen/ui_3m">
 
     <com.mercadopago.android.px.internal.view.MPTextView
         android:id="@+id/summary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/ui_2m"
-        android:lineSpacingExtra="@dimen/ui_050m"
+        android:ellipsize="end"
         android:gravity="center"
-        tools:customStyle="semi_bold"
-        tools:textColor="@color/ui_meli_black"
-        tools:text="Tope de descuento $ 250"/>
+        android:lineSpacingExtra="@dimen/ui_050m"
+        android:maxLines="2"
+        android:textColor="@color/px_color_translucent_black"
+        android:textSize="@dimen/ui_2m"
+        app:lineHeight="@dimen/ui_2_5m"
+        tools:text="Tope de descuento: $ 250" />
 
     <com.mercadopago.android.px.internal.view.MPTextView
         android:id="@+id/description"
@@ -27,22 +29,27 @@
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_marginTop="@dimen/ui_1m"
-        android:lineSpacingExtra="@dimen/ui_050m"
-        android:textSize="@dimen/ui_2m"
         android:gravity="center"
-        tools:textColor="#cc000000"
-        tools:text="Tope disponible para consumir en un único pago. Válido hasta el 1 de agosto de 2019."/>
+        android:lineSpacingExtra="@dimen/ui_050m"
+        android:textColor="@color/px_color_translucent_black"
+        android:textSize="@dimen/ui_2m"
+        app:lineHeight="@dimen/ui_2_5m"
+        tools:text="Tope disponible para consumir en un único pago. Válido hasta el 1 de agosto de 2019." />
 
     <com.mercadopago.android.px.internal.view.MPTextView
         android:id="@+id/legal_terms"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
+        android:layout_marginBottom="@dimen/ui_2m"
+        android:layout_marginEnd="@dimen/ui_2m"
+        android:layout_marginStart="@dimen/ui_2m"
         android:layout_marginTop="@dimen/ui_5m"
-        android:text="@string/px_terms_and_conditions"
+        android:gravity="center"
         android:lineSpacingExtra="@dimen/ui_050m"
+        android:text="@string/px_terms_and_conditions"
         android:textColor="@color/ui_components_primary_color"
         android:textSize="@dimen/ui_2m"
-        android:gravity="center"
-        tools:text="Términos y condiciones"/>
+        app:lineHeight="@dimen/ui_2m"
+        tools:text="Términos y condiciones" />
 </LinearLayout>
