--- a/px-checkout/src/main/res/layout/px_badge_view.xml
+++ b/px-checkout/src/main/res/layout/px_badge_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     tools:parentTag="android.widget.LinearLayout">
@@ -15,5 +16,6 @@
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:customStyle="semi_bold"
         tools:text="Nivel 2"/>
 </merge>
