--- a/px-checkout/src/main/res/values/dimens.xml
+++ b/px-checkout/src/main/res/values/dimens.xml
@@ -31,6 +31,8 @@
     <dimen name="px_badge_size">25dp</dimen>
     <dimen name="px_bigger_badge_size">52dp</dimen>
     <dimen name="px_badge_offset">16dp</dimen>
+    <dimen name="px_onetap_pager_item_padding">6dp</dimen>
+    <dimen name="px_onetap_pager_padding">18dp</dimen>
 
     <!-- Payment result components -->
 
