--- a/px-checkout/src/main/res/layout/px_fragment_account_money_low_res.xml
+++ b/px-checkout/src/main/res/layout/px_fragment_account_money_low_res.xml
@@ -16,6 +16,7 @@
         app:cardPreventCornerOverlap="false">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/payment_method_account_money"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
